traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:9: error: not found: value toto
      ligneEst(compteur, toto, ordonnee, hauteur, largeur)
                         ^